--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>my express app</title>
     <script type="text/javascript" src="script.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
     <h2>my express app </h2>
+    <input placeholder="user name" id="userName" type="text">
+    <button onclick="getUserInfo()">Get User Info</button>
+    <p id="userInfo"></p>
 </body>
 </html>
