server now working

--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,13 @@
     <input placeholder="user name" id="userName" type="text">
     <button onclick="getUserInfo()">Get User Info</button>
     <p id="userInfo"></p>
+    <h3>user registration</h3>
+    <input type="text" id="user-name" placeholder="username">
+    <input type="text" id="user-id" placeholder="user-id">
+    <input type="text" id="message" placeholder="message">
+    <button onClick= "handleSubmit()">submit</button>
+    <h3>get all users</h3>
+    <button onCLick= "continue()">get</button>
+    <p id= "result"></p>
 </body>
 </html>
