--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,26 @@
+    
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>my express app</title>
-    <script type="text/javascript" src="script.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>My express app</title>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="script.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h2>my express app </h2>
-    <input placeholder="user name" id="userName" type="text">
-    <button onclick="getUserInfo()">Get User Info</button>
-    <p id="userInfo"></p>
-    <h3>user registration</h3>
-    <input type="text" id="user-name" placeholder="username">
-    <input type="text" id="user-id" placeholder="user-id">
-    <input type="text" id="message" placeholder="message">
-    <button onClick= "handleSubmit()">submit</button>
-    <h3>get all users</h3>
-    <button onCLick= "continue()">get</button>
-    <p id= "result"></p>
+  <h2>My Express App</h2>
+  <input placeholder="user name" id="userName" type="text">
+  <button onClick="getUserInfo()">Get user info</button>
+  <p id="userInfo"></p>
+  <h2>User registration</h2>
+  <input placeholder="user name" id="userNameReg" type="text">
+  <input placeholder="user id" id="userIdReg" type="text">
+  <input placeholder="message" id="message" type="text">
 </body>
+
 </html>
