--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-    
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,13 +13,17 @@
 
 <body>
   <h2>My Express App</h2>
-  <input placeholder="user name" id="userName" type="text">
-  <button onClick="getUserInfo()">Get user info</button>
+  <input placeholder="user name" type="text" id="userName">
+  <button onclick="getUserInfo()">Get user info</button>
   <p id="userInfo"></p>
-  <h2>User registration</h2>
-  <input placeholder="user name" id="userNameReg" type="text">
-  <input placeholder="user id" id="userIdReg" type="text">
-  <input placeholder="message" id="message" type="text">
+  <h3>User registration</h3>
+  <input type="text" id="user-name" placeholder="User name">
+  <input type="text" id="message" placeholder="Message">
+  <button onclick="handleSubmit()">Submit</button>
+  <h3>Get all users</h3>
+  <button onclick="getAllUsers()">Get</button>
+  <p id="result"></p>
+
 </body>
 
 </html>
